# MaaInspector

./: .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  setup_embedded_python.py  tailwind.config.ts  test-duplicate-nodes.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml  tauri-build.yml
scripts/: generate-changelog.ps1  prepare-maa-framework.ps1
src/: App.vue  changelog.ts  main.ts  vite-env.d.ts
src-tauri/: .taurignore  Cargo.toml  config.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/backend/: config.json  main.py  requirements.txt  test.py
src-tauri/backend/common/: __init__.py  utils.py
src-tauri/backend/routes/: __init__.py  agent_routes.py  debug_routes.py  device_routes.py  resource_routes.py  system_routes.py
src-tauri/backend/untils/: __init__.py  maafw.py
src-tauri/src/: config.rs  events.rs  lib.rs  logging.rs  maafw.rs  main.rs  resources.rs  response.rs
src-tauri/src/commands/: agent.rs  debug.rs  device.rs  log.rs  mod.rs  resource.rs  system.rs
src-tauri/src/maafw/: controller.rs  image.rs  mod.rs  resource.rs  tasker.rs
src/__tests__/: ClearCanvasConfirmModal.test.ts  ContextMenu.test.ts  DeviceManager.test.ts  ResourceManager.test.ts  apiLogging.test.ts  appConfigWorkspace.test.ts  cache.test.ts  changelog.test.ts  deviceUtils.test.ts  duplicate-missing-nodes.test.ts  fileId.test.ts  flowSubgraph.test.ts  flowWorkspaceStorage.test.ts  logger.test.ts  perfTrace.test.ts  pipelineTransform.test.ts  settings.test.ts  setup.ts  templateUtils.test.ts  throttle.test.ts  typeGuards.test.ts  useDebugPanelState.test.ts  useDeviceScreenPicker.test.ts  useDraggableWindow.test.ts  useEditorActions.test.ts  useFloatingPanel.test.ts  useFlowWorkspaceVm.test.ts  useImageManager.test.ts  useInfoPanelVm.test.ts  useNodeForm.test.ts  usePanelResize.test.ts  usePreloadCache.test.ts  useSaveManager.test.ts  useTabManager.test.ts  useTemplateManager.test.ts  viewportSync.test.ts  workspace.test.ts
src/assets/: changelog.md
src/components/: FlowEditor.vue  FlowWorkspace.vue
src/composables/: useDebugPanel.ts  useDebugPanelState.ts  useDebugRunner.ts  useDeviceScreenPicker.ts  useDraggableWindow.ts  useEditorActions.ts  useFloatingPanel.ts  useFlowGraph.ts  useImageManager.ts  useLayout.ts  useLazyLoad.ts  useMainAppState.ts  useNodeForm.ts  usePanelResize.ts  usePreloadCache.ts  useSaveManager.ts  useSseStream.ts  useSystemState.ts  useTabManager.ts  useWorkspacePersistence.ts
src/services/: api.ts  cache.ts  httpClient.ts  requestLog.ts  requestTypes.ts  trace.ts
src/stores/: appConfig.ts  settings.ts  workspace.ts
src/utils/: changelog.ts  device.ts  fileId.ts  flowOptions.ts  flowSubgraph.ts  (+16 more)
(+56 files in other folders)
