[package]
name = "MaaInspector"
version = "0.1.4"
description = "MaaFramework 可视化调试工具"
authors = ["TanYaShue"]
edition = "2024"
license = "MIT"
repository = "https://github.com/MaaXYZ/MaaInspector"
readme = "README.md"
keywords = ["maa", "framework", "debugger", "gui"]
categories = ["development-tools::debugging", "gui"]

[lib]
name = "maa_inspector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MaaFramework Rust Binding - dynamic linking for packaged app
# DLL location: exe_dir/MAA-win-x86_64-v5.10.0/bin/MaaFramework.dll
maa-framework = { version = "1", features = ["dynamic"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Image processing
image = "0.25"
base64 = "0.22"

# Utilities
regex = "1"
walkdir = "2"
mime_guess = "2"
rfd = "0.15"

[dev-dependencies]
tempfile = "3"

# Windows specific
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security"
] }

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true

[profile.dev]
incremental = true
